# cmake-with-protobuf

./: .gitignore  CMakeLists.txt  README.md  write.cc
change-dependencies/: CMakeLists.txt  math2.cpp  math2.h  math3.cpp  math3.h
cmake-with-protobuf/: CMakeLists.txt  write.cc
cmake-with-protobuf/proto/: CMakeLists.txt  addressbook.proto
compare-static-and-dynamic-libraries/: math2.h
compile-dependencies/: CMakeLists.txt
compile-dependencies/shared-lib/: CMakeLists.txt  greeting_shared.cc
compile-dependencies/src/: CMakeLists.txt
compile-dependencies/static-lib/: CMakeLists.txt  greeting_static.cc
proto/: CMakeLists.txt
static-and-dynamic-libs/: CMakeLists.txt  main.cc  math2.cpp  math2.h
