FIND_PACKAGE(Protobuf REQUIRED)
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIRS})
include_directories(${Protobuf_PROTOC_LIBRARIES})
# INCLUDE_DIRECTORIES("/usr/local/include")
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER addressbook.proto)
ADD_LIBRARY(proto ${PROTO_HEADER} ${PROTO_SRC})

TARGET_LINK_LIBRARIES(proto INTERFACE ${PROTOBUF_LIBRARIES})
